--- a/src/components/Projects/Projects.module.scss
+++ b/src/components/Projects/Projects.module.scss
@@ -21,8 +21,9 @@
     justify-content: center;
     align-content: center;
     align-items: center;
-    width: 100%;
+    width: 100vw;
     height: 100vh;
+    overflow: hidden;
 
     &__content {
       z-index: 0;
